<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#FDCBCB"
        android:gravity="center_horizontal"
        android:text="@string/reservation"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/please"
        android:textColor="#3E1818" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/iptName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"

                    android:inputType="text"
                    android:textColor="#8F8282"
                    android:textColorHint="#F3DADA" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/num" />

                <EditText
                    android:id="@+id/iptMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"

                    android:textColor="#8F8282"
                    android:textColorHint="#F3DADA" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Num0fPax"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pax" />

                <EditText
                    android:id="@+id/iptNumOfPax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text"

                    android:textColor="#8F8282"
                    android:textColorHint="#F3DADA" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="#CF607A" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#CF607A" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:timePickerMode="spinner" />

            <TextView
                android:id="@+id/tvSmoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textColor="#CF607A" />

            <RadioButton
                android:id="@+id/rbSmoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoking" />

            <RadioButton
                android:id="@+id/rbNonSmoking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NonSmoking" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm"
                    android:textColorHighlight="#B37575"
                    android:textColorLink="#CF6565"
                    app:backgroundTint="#E68686" />

                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset"
                    app:backgroundTint="#E68686" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>